# OpenGLSandBox

./: CMakeLists.txt  README.md  teste.cpp
assets/shaders/: basic.frag  basic.vert  notNorm.vert  texture.frag  texture.vert  texture1.frag
assets/textures/xdemon/: idle.png~
engine/: FileUtils.cpp  Input.cpp  Input.hpp  Mesh.cpp  Mesh.hpp  Render.cpp  Render.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  gameObject.cpp  gameObject.hpp
examples/cube/: main.cpp
examples/hotlineNatal/: main.cpp  player.cpp  player.hpp
examples/minigame/: main.cpp
examples/pixels/: main.cpp
examples/polygonGenerator/: main.cpp
examples/textureQuad/: main.cpp
src/: main.cpp
